--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "devDependencies": {
-        "babel-core": "^6.22.1",
+        "babel-core": "^6.24.0",
         "babel-jest": "^19.0.0",
-        "babel-loader": "^6.2.10",
+        "babel-loader": "^6.4.0",
         "babel-polyfill": "^6.23.0",
         "babel-preset-es2015": "^6.22.0",
         "babel-preset-latest": "^6.22.0",
         "babel-preset-react": "^6.23.0",
-        "coffee-loader": "^0.7.2",
-        "coffee-script": "^1.12.3",
+        "coffee-loader": "^0.7.3",
+        "coffee-script": "^1.12.4",
         "glob": "^7.1.1",
         "jest": "^19.0.0",
         "path-complete-extname": "^0.1.0",
@@ -16,10 +16,12 @@
         "react-addons-test-utils": "^15.4.2",
         "react-test-renderer": "^15.4.2",
         "webpack": "^2.2.1",
-        "webpack-dev-server": "^2.3.0",
-        "webpack-merge": "^2.6.1"
+        "webpack-dev-server": "^2.4.1",
+        "webpack-merge": "^4.0.0"
     },
     "dependencies": {
+        "babel-preset-env": "^1.2.1",
+        "compression-webpack-plugin": "^0.3.2",
         "lodash": "^4.17.4",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
@@ -31,12 +33,11 @@
     },
     "jest": {
         "modulePaths": [
-            "../app/javascript",
-            "../vendor/node_modules"
+            "./app/javascript"
         ],
         "roots": [
-            "../app/javascript",
-            "../spec/javascript"
+            "./app/javascript",
+            "./spec/javascript"
         ]
     }
 }
