--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "devDependencies": {
         "babel-core": "^6.24.0",
         "babel-jest": "^19.0.0",
-        "babel-loader": "^6.4.0",
+        "babel-loader": "^6.4.1",
         "babel-polyfill": "^6.23.0",
         "babel-preset-es2015": "^6.22.0",
         "babel-preset-latest": "^6.22.0",
@@ -15,18 +15,31 @@
         "rails-erb-loader": "^3.2.0",
         "react-addons-test-utils": "^15.4.2",
         "react-test-renderer": "^15.4.2",
-        "webpack": "^2.2.1",
-        "webpack-dev-server": "^2.4.1",
-        "webpack-merge": "^4.0.0"
+        "webpack": "^2.3.2",
+        "webpack-dev-server": "^2.4.2",
+        "webpack-merge": "^4.1.0"
     },
     "dependencies": {
-        "babel-preset-env": "^1.2.1",
+        "autoprefixer": "^6.7.7",
+        "babel-preset-env": "^1.2.2",
         "compression-webpack-plugin": "^0.3.2",
+        "css-loader": "^0.27.3",
+        "extract-text-webpack-plugin": "^2.1.0",
+        "file-loader": "^0.10.1",
+        "js-yaml": "^3.8.2",
         "lodash": "^4.17.4",
+        "node-sass": "^4.5.1",
+        "postcss-loader": "^1.3.3",
+        "postcss-smart-import": "^0.6.10",
+        "precss": "^1.4.0",
         "react": "^15.4.2",
         "react-dom": "^15.4.2",
+        "react-redux": "^5.0.3",
         "redux": "^3.6.0",
-        "webpacker-react": "0.0.4"
+        "sass-loader": "^6.0.3",
+        "style-loader": "^0.16.0",
+        "webpack-manifest-plugin": "^1.1.0",
+        "webpacker-react": "^0.2.1"
     },
     "scripts": {
         "test": "jest"
